Modified degraph-config to show hierarchy of packages

--- a/src/main/resources/de/stevenschwenke/java/javafx/degraph.config
+++ b/src/main/resources/de/stevenschwenke/java/javafx/degraph.config
@@ -6,12 +6,14 @@ exclude = org.**
 exclude = java.**
 exclude = javafx.**
 
-layers = {
-   Server de.stevenschwenke.java.javafx.workLifeBalance.server.**
-   Client de.stevenschwenke.java.javafx.workLifeBalance.client.**
+level3 = {
+   *.*.*.*.*.*.*.(*)**
 }
 
-#packagesClient = {
- #  newTimeRecord de.stevenschwenke.java.javafx.workLifeBalance.client.newTimeRecord.**
-#}
+level2 = {
+   *.*.*.*.*.*.(*)**
+}
 
+level1 = {
+   *.*.*.*.*.(*)**
+}
