--- a/pom.xml
+++ b/pom.xml
@@ -54,9 +54,9 @@
 			<version>3.2.1</version>
 		</dependency>
 		<dependency>
-			<groupId>hsqldb</groupId>
+			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
-			<version>1.8.0.10</version>
+			<version>2.2.9</version>
 		</dependency>
 		<dependency>
 			<groupId>org.liquibase</groupId>
