--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
 			<artifactId>liquibase-core</artifactId>
 			<version>2.0.5</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.jfxtras</groupId>
+			<artifactId>jfxtras-labs</artifactId>
+			<version>2.2-r5</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
