ComponentFactory to build up components. Step in the right direction towards good dependency management. However, circular dependency still existing.

--- a/src/main/resources/de/stevenschwenke/java/javafx/degraph.config
+++ b/src/main/resources/de/stevenschwenke/java/javafx/degraph.config
@@ -5,6 +5,7 @@ exclude = com.**
 exclude = org.**
 exclude = java.**
 exclude = javafx.**
+exclude = jfxtras.**
 
 level3 = {
    *.*.*.*.*.*.*.(*)**
